fix: fixes style bug on smaller screens

--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -11,46 +11,88 @@
     }
   
     .container header h1 {
-      font-size: 24px;
+      font-size: 20px;
       text-align: center;
+      background-color: brown;
     }
   }
   
-  @media (max-width: 768px) {
+  @media (max-width: 900px) {
     .container header #input-search,
     .container header #btn-search
     {
       width: 100%;
     }
-  }
-  
-  @media (max-width: 425px) {
     .info{
       display: flex;
       flex-flow: column wrap;
       align-items: center;
       justify-content: center;
+      text-align: center;
     }
+    .data{
+      width: 100% !important;
+     }
+     header{
+      width: 100% !important;
+     }
+    
+  }
+  
+  @media (max-width: 520px) {
+    
     main {
       padding: 15% 0;    
     }
-  
+  header input{
+    width: 100% !important;
+  }
     .container .profile-data .info img{
       margin-bottom: 20px;
     
     }
   
-    .container .profile-data .info img,
-    .container .profile-data .info .data
-    {
-      max-width: 50%;
-      padding: 0;
-      margin:20px;
-    }
+   
     .container .infoRepo span{
      display: flex;
      flex-flow: column wrap;
      margin: 5px;
+    }
+  
+  }
+  @media (max-width: 320px) {
+    .container .profile-data .repositories ul li a{
+      border:none !important;
+    }
+    .eventsMessage{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+   
+    }
+   .container .eventsMessage ul{
+    display: flex;
+    width: 90% !important;
+    padding: 10px !important;
+    align-items: flex-start !important;
+    justify-content: center !important;
+    flex-wrap: wrap !important;
+
+   }
+    .container .eventsMessage p{
+      font-size: 10px !important;
+
+     }
+    .eventsMessage li{
+      flex-direction: column;
+      width: 100%;
+      flex-wrap: wrap !important;
+      text-align: center !important;
+
     }
   }
   
