--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,14 +4,15 @@ body {
   background-color:#24292e;
   font-family: "Kumbh Sans", sans-serif;  
   text-align: center;    
-  padding-bottom: 100px;
+  
 }
 
 main {
   display: flex;  
   justify-content: center;
+  justify-content: center;
   flex-direction: column;
-  padding: 50px 0 0;      
+     
 }
 
 .devicon-github-original{
@@ -20,9 +21,7 @@ main {
   color: #FFFFFF;
 }
 
-.section{
-  padding: 70px 0;
-}
+
 
 .container {
   width: 60%; /* se for uma tela menor que 980px vai se adaptar a 70% */
@@ -32,6 +31,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   border-radius: 30px;
   padding: 30px;
   margin: 0 auto;
@@ -40,8 +40,9 @@ main {
 .container header {
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-direction: column;
-  padding: 30px 0;
+  
 }
 
 .container header h2 {
@@ -51,22 +52,22 @@ main {
 }
 
 .container header #input-search {
-  width: 400px;
-  font-size: 17px;
-  margin: 0 auto;
-  padding: 10px;
-  border-radius: 7px;
+  width: 200px;
+  font-size: 11px;
+  padding: 7px;
+  border-radius: 5px;
   border: 1px solid grey;
 }
 
 .container header #btn-search {
   width: 200px;
-  font-size: 17px;
-  margin: 20px auto 0;
-  padding: 10px;
-  border-radius: 7px;  
+  font-size: 14px;
+  margin-top: 20px;
+  padding: 7px;
+  border-radius: 7px;
   cursor: pointer;
   border: 1px solid grey;
+  
 }
 
 .container header #btn-search:hover {
@@ -79,13 +80,15 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   padding: 40px;  
 }
 
 .container .profile-data .info {
   display: flex;  
-  flex-wrap: wrap;
+  width: 100%;
   align-items: center;
+  text-align: center;
 }
 
 .container .profile-data .info .data{
@@ -100,21 +103,22 @@ main {
 }
 
 .container .profile-data .info h1{
-  font-size: 20px;
+  font-size: 17px;
   margin-bottom: 20px;
   font-weight: 700;
 }
 
 .container .profile-data .info p{
-  font-size: 15px;  
+  font-size: 14px;  
   font-weight: 400;
   line-height: 23px;
+  
 }
 
 /* REPOSITORIES */
 
 .container .profile-data .repositories h2{
-  margin-bottom: 30px;
+  margin-bottom: 25px;
   text-align: center;
 }
 
@@ -145,14 +149,17 @@ main {
   font-size: 15px;
   font-weight: 600;
 }
+.container .eventsMessage ul{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
 .container .eventsMessage li{
 display: flex;
-justify-content: center;
-text-align: center;
 margin-bottom: 5px;
 }
 .container .eventsMessage h3{
-  font-size: 20px;
+  font-size: 17px;
   font-weight: 700;
   margin-bottom: 15px;
   color: #454a50;
@@ -162,6 +169,12 @@ margin-bottom: 5px;
  color: #494f55;
  font-weight: 600;
  margin-right: 10px;
+
+}
+.data{
+ display: flex;
+ flex-direction: column;
+ text-align: center;
 
 }
 .container .eventsMessage span{
